[package]
name = "ark-security-core"
version = "0.1.0"
description = "High-Performance Low-Level Hardware Interaction & Mirror Pipeline Engine"
edition = "2021"
authors = ["Issac Andrew"]

[dependencies]
# Tauri framework core dependencies
# تم تجريد الخصائص إلى الحد الأدنى الصارم والمطابق لملف الـ JSON (إزالة ميزة الـ cli)
tauri = { version = "1.5", features = ["shell-open-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchronous runtime environment for high-speed event dispatching
tokio = { version = "1.35", features = ["full"] }

# Low-level cross-platform USB communication suite
# Enabling 'vendored' compiles libusb statically into the final binary artifact
rusb = { version = "0.9", features = ["vendored"] }

# Cryptographic and secure memory sanitization
zeroize = { version = "1.7", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Raw Win32 API bindings optimized for privilege checking and system token queries
windows-sys = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation"
] }

[build-dependencies]
# Required by build.rs to embed the Windows Admin Manifest into the executable asset
embed-resource = "2.5"
tauri-build = "1.5"

[profile.release]
# Advanced compiler optimizations for execution speed and binary size hardening
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
